# X-TO-FBX

./: .gitignore  CMakeLists.txt  README.md  build.sh  simple_build.sh
.same/: todos.md
include/: AnimationTimingCorrector.h  BinaryXFileParser.h  FBXExporter.h  Logger.h  XFileData.h  XFileParser.h
src/: main.cpp
src/core/: AnimationTimingCorrector.cpp
src/data/: XFileData.cpp
src/exporters/: FBXExporter.cpp
src/parsers/: BinaryXFileParser.cpp  XFileParser.cpp
src/utils/: Logger.cpp
tests/: CMakeLists.txt  test_main.cpp  test_timing_corrector.cpp  test_xfile_parser.cpp
